Bug 246608 - can't set margins.
Summary: can't set margins.
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: Persona: Susan
Assignee: Thomas Zander
URL:
Keywords:
: 239598 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-03 14:56 UTC by Thomas Zander
Modified: 2011-02-05 01:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Zander 2010-08-03 14:56:08 UTC
In the frame properties dialog, tab geometry, I should be able to modify the margins of the frame. This seems to not work. After pressing Ok the screen doesn't update and reopening the dialog shows the margins set to zero again.
Comment 1 Thomas Zander 2011-02-05 01:04:15 UTC
Git commit 70db01f794555009000d2c4ab729b2d1d0353af4 by Thomas Zander.
Committed on 05/02/11 at 00:58.
Pushed by zander into branch 'master'.

Process and save text margins to the text frame.

BUG:246608

M  +14   -7    kword/part/dialogs/KWFrameGeometry.cpp     

http://commits.kde.org/koffice/70db01f794555009000d2c4ab729b2d1d0353af4
Comment 2 Thomas Zander 2011-02-05 01:20:15 UTC
*** Bug 239598 has been marked as a duplicate of this bug. ***