Process and save text margins to the text frame.

BUG:246608